Verify path to load csv file
Verify path to load csv file

--- a/code/FinalAssignment-Phase1.ipynb
+++ b/code/FinalAssignment-Phase1.ipynb
@@ -13,7 +13,7 @@
     "from collections import defaultdict, Counter\n",
     "\n",
     "print('\\n------------------- Load and print head of dataset-------------\\n')\n",
-    "df = pd.read_csv('BreastCancerWisconsin.csv') \n",
+    "df = pd.read_csv('../data/BreastCancerWisconsin.csv') \n",
     "print(df.head())\n",
     "print('\\n------------------- Replace ? by NaN in column A7-------------\\n')\n",
     "df['A7'] = df['A7'].replace('?', np.NaN)\n",
