--- a/code/FinalAssigment-Phase2.ipynb
+++ b/code/FinalAssigment-Phase2.ipynb
@@ -327,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Variation Analysis:\n",
+    "<b>Data Variation Analysis:</b>\n",
     "\n",
     "The variables with the highest standard deviations are A7, A9, A3, and A4. This tells us that these variables have the greatest variance. This is also illustrated with the box plot."
    ]
@@ -404,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
